--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -1,10 +1,10 @@
-.main {
+.main, .side {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   align-items: center;
   padding: 6rem;
-  min-height: 100vh;
+  /* min-height: 100vh; */
 }
 
 .description {
